# hypothesis-dataclasses

./: README.md  index.html  pyproject.toml  requirements.txt  requirements_pydantic.txt  requirements_tests.txt  requirements_tests_pydantic.txt  tox.ini
.github/workflows/: tests.yml
coverage/: d_9c14691c5091196a___init___py.html  d_9c14691c5091196a__call_once_drawn_py.html  d_9c14691c5091196a__dataclass_py.html  d_9c14691c5091196a__field_from_py.html  d_9c14691c5091196a__instances_py.html  d_9c14691c5091196a__manual_draw_py.html  d_9c14691c5091196a__partial_instance_py.html  d_9c14691c5091196a__scfunc_descriptor_py.html  index.html  status.json
src/hypothesis_dataclasses/: __init__.py  _call_once_drawn.py  _dataclass.py  _field_from.py  _instances.py  _manual_draw.py  _partial_instance.py  _scfunc_descriptor.py
tests/: check_readme_examples.py  coverage_postprocessing.py  run_doctest.py  test_calloncedrawn.py  test_compatibility.py  test_dataclass_parameters.py  test_errors.py  test_examples.py  test_helpers.py  test_manualdraw.py  test_pydantic.py
tests/coverage_report_fallback/: index.html
